--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,17 @@
+.topleft{
+      position: absolute;
+      top: 0;
+      left: 0;
+      margin: 5px;
+}
+
+.toprigth{
+      position: absolute;
+      top: 0;
+      right: 0;
+      margin: 10px;
+}
+
 body {
       background-color: whitesmoke;
       color: black;
@@ -11,8 +25,35 @@ header {
       color: black;
       padding: 10px;
       text-align: center;
+      position: relative;
 }
 
+/*barra de pesquisa*/
+.searchBar{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 20px;
+}
+
+.searchInput{
+      
+  padding: 10px;
+  border: 2px solid #ccc;
+  border-radius: 8px 0 0 8px;
+  outline: none;
+  width: 200px;
+}
+
+.searchBtn{
+  padding: 10px 15px;
+  border: 2px solid #ccc;
+  border-left: none;
+  background-color: #4a90e2;
+  color: white;
+  border-radius: 0 8px 8px 0;
+  cursor: pointer;
+}
 
 ul {
 
