--- a/css/home.css
+++ b/css/home.css
@@ -26,8 +26,8 @@ body {
 
 /* Estilo para o header, que e o cabecalho da pagina */
 header {
-      background-color: #9ACBD0; 
-      color: black; 
+      background-color:#484d50; 
+      color: white; 
       padding: 10px; 
       text-align: center; 
       position: relative; /* Posiciona o elemento de forma relativa */
@@ -82,6 +82,7 @@ li {
       align-items: center; /* Alinha os itens verticalmente ao centro */
       text-align: center; /* Centraliza o texto */
       cursor: pointer; /* Cursor de ponteiro ao passar o mouse */
+      
 }
 
 /* Classe .hidden para esconder elementos */
@@ -92,3 +93,4 @@ li {
 .clicable{
       cursor: pointer;
 }
+
