--- a/css/home.css
+++ b/css/home.css
@@ -25,21 +25,16 @@ body {
 }
 
 /* Estilo para o header, que e o cabecalho da pagina */
-.header {
-      background-color:#484d50; 
-      color: white; 
+header {
+      background-color: #9ACBD0; 
+      color: black; 
       padding: 10px; 
       text-align: center; 
       position: relative; /* Posiciona o elemento de forma relativa */
 }
 
-.logo{    
-      margin-top: 10px;
-      margin-right: 10px;
-     border-radius: 10px;
-      background-color: white; 
-      width: 80px; /* Largura de 280px */
-      height: 80px; /* Altura de 280px */ 
+header h1{
+    color: white;
 }
 
 /* Classe .searchBar para estilizar a barra de pesquisa */
@@ -91,7 +86,6 @@ li {
       align-items: center; /* Alinha os itens verticalmente ao centro */
       text-align: center; /* Centraliza o texto */
       cursor: pointer; /* Cursor de ponteiro ao passar o mouse */
-      
 }
 
 /* Classe .hidden para esconder elementos */
@@ -102,4 +96,3 @@ li {
 .clicable{
       cursor: pointer;
 }
-
