alterações importantes (imagem, pag, css, etc)

--- a/css/home.css
+++ b/css/home.css
@@ -26,7 +26,7 @@ body {
 
 /* Estilo para o header, que e o cabecalho da pagina */
 header {
-      background-color: #9ACBD0; 
+      background-color: #808080; 
       color: black; 
       padding: 10px; 
       text-align: center; 
